frontend/src/styles/FullPost.css
.app-window * {
    font-weight: 600;
    color: #BBC7DD;
}

.app-window {
    display: flex;
    flex-direction: column;
    min-height: 60vh;
    width: 50vw;
    min-width: 37.5rem;
    height: auto;
    border-bottom: 0.125rem #BBC7DD solid
}

.post-header {
    height: 3em;
    background-color: #111722;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
}

.header-icon {
    margin-left: 1.25rem;
}

.header-title {
    font-size: 1.1875rem;
    font-weight: 600;
    margin: 0 0.3125rem;
}

.title-bar {
    padding: 0.625rem 1.25rem;
    position: relative;
    display: flex;
    gap: 5px;
    width: 100%;
    height: auto;
    min-height: 3em;
    background-color: #222E44;
    justify-content: space-between;
}

.title-time-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
    width: 60%;
    gap: 5%;
}

.share-save-container {
    display: flex;
    height: 100%;
    gap: 5px;
    flex-wrap: wrap;
    align-items: center;
    justify-content: flex-end;
    
    width: 40%;
}

.share-save-container button {
    max-height: 3rem;
}

.post-title {
    overflow: hidden; 
    text-overflow: ellipsis; 
    display: -webkit-box; 
    -webkit-line-clamp: 3; 
    -webkit-box-orient: vertical; 
    white-space: normal;
    width: 100%;
    font-size: 1.15rem;
    margin: left;
    font-weight: 600;
    word-break: break-all;
}

.time-since-post {
    font-weight: 100;
    letter-spacing: -2%;
    font-size: 0.75rem;
}

.share-button {
    padding: 10px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 45%;
    min-width: 4rem;
    height: 60%;
    box-sizing: border-box;
    background-color: #192233;
    border-radius: 0.5rem;
    border: none;
    transition: all 0.3s ease-in-out;
    gap: 5px
}

.share-button:hover {
    background-color: #2c3e63;
    transition: all 0.2s ease-in-out;
}

.share-button:active {
    background-color: #334566;
    transition: all 0.2s ease-in-out;
}

.share-icon {
    height: 1rem;
    width: 1rem;
}

.share-icon img {
    height: 100%;
    width: auto;
}

.share-save-container .save-button {
    min-width: 4rem;
    padding: 10px;
    gap: 5px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 45%;
    height: 60%;
    box-sizing: border-box;
    background-color: #192233;
    border-radius: 0.5rem;
    border: none;
    transition: all 0.3s ease-in-out;
}

.share-save-container .save-button:hover {
    background-color: #2c3e63;
    transition: all 0.2s ease-in-out;
}

.share-save-container .saved-button {
    padding: 10px;
    cursor: pointer;
    display: flex;
    align-items: center;
    width: 20%;
    height: 60%;
    box-sizing: border-box;
    background-color: #008B8B;
    border-radius: 0.5rem;
    border: none;
    margin: 0 1.25rem 0 -0.9375rem;
    transition: all 0.2s ease-in-out;
}

.save-icon {
    height: 1rem;
    width: 1rem;
}

.save-icon img {
    height: 100%;
    width: 100%;
}

.save-title {
    
}

.post-body {
    display: flex;
    flex: 1 0 auto;
}

.post-properties-side {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-width: 25%;
    width: 25%;
    height: auto;
    background-color: #192233;
}

.post-user-container {
    display: flex;
    flex-direction: column;
    height: auto;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;
    margin: 1.25rem 0;
}

.post-user-container .avatar {
    height: 6rem;
    width: 6rem;
}

.comment-accepted-container {
    cursor:default;
    display: flex;
    align-items: center;
    justify-content: center;
    height: auto;
    width: 50%;
    min-width: 6.25rem;
    gap: 0.3125rem;
    font-size: 0.8rem;
    margin: 0.75rem 0;
    padding: 0.3125rem ;
    border-radius: 0.6875rem;
    background-color: #008B8B;
    transition: all 0.3s;
}

.comment-accepted-container:hover {
    background-color: #09a0a0;
    transition: all 0.1s;
}

.accepted-icon {
    height: 0.9375rem;
}

.accepted-icon img {
    height: inherit;
    width: inherit;
}

.vote-container {
    height:inherit;
    justify-items: center;
    width: 100%;
}


.tag-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: flex-start;
    margin-top: 1.25rem;
}



.tag {
    cursor: pointer;
    text-wrap: wrap;
    text-align: center;
    overflow: hidden;
    text-overflow: ellipsis;
    margin: 0.3125rem 0.3125rem;
    padding: 0.25rem 0.0625rem;
    background-color: #334566;
    border-radius: 0.4375rem;
    width: 60%;
    min-width: 4.375rem;
    font-size: 0.75rem;
    font-weight: 100;
    transition: all ease-in-out 0.25s;
}

.tag:hover {
    font-size: 0.86rem;
    width: 70%;
    background-color: #385c9b;
    transition: all ease-in-out 0.1s;
}

.post-content {
    display: flex;
    flex-direction: column;
    min-width: 75%;
    background-color: #131925;
    gap: 0.3125em;
}

.comment-content {
    display: flex;
    flex-direction: column;
    min-width: 75%;
    background-color: #161E2C;
    gap: 0.3125rem;
}

.content-header {
    display: flex;
    align-items: center;
    align-content: center;
    justify-content: flex-start;
    justify-items: center;
    height: 1em;
    gap: 0.3125em;
    margin: 0.625em 1.25em 
}

.content-header-text {
    font-size: 1.1rem;
}

.content-header-logo {
    height:100%;
}

.content-header-logo img {
    height: 100%;
    width: 100%;
}

.content-body p {
    text-wrap: wrap;
    word-wrap: break-word;
    overflow: hidden;
    font-weight: lighter;
    font-size: 0.9rem;
}

.content-body {
    margin: 0.3125rem 1.25rem;
}

.code {
    height: auto;
}

.code-header {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    height: auto;
    gap: 0.3125rem;
    margin: 0.625rem 1.25rem 
}

.code-toggle {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.3125rem;
    background: none;
    height: auto;
    width: 9.375rem;
    text-align: center;
    padding: 0.4375rem 1.5625rem;
    border-radius: 0.625rem;
    border: #BBC7DD 0.0625rem solid;
    cursor: pointer;
    margin-left: auto;
    font-size: 0.8rem;
    transition: all 0.3s;
}

.code-toggle:hover {
    background-color: #222E44;
    transition: all 0.1s;
}

.code-toggle-logo {
    height: 0.75rem;
    width: 0.75rem;
}

.code-toggle-logo img {
    height: 100%;
}

.code-hidden {
    background-color: #222E44;
    transition: all 0.1s;
}

.code-header-text {
    font-size: 1.1rem;
}

.code-header-logo {
    height:1rem;
}

.code-header-logo img {
    height: 100%;
    width: 100%;
}

.code-content {
    display: flex;
    border: 0.0625rem solid #BBC7DD;
    padding: 0.625rem 0.9375rem;
    margin: 1.25rem;
    margin-top: 0.625rem;
}

.code-content-enter {
    opacity: 0;
}

.code-content-enter-active {
    opacity: 1;
    transition: opacity 0.2s;
}

.code-content-exit {
    opacity: 1;
}

.code-content-exit-active {
    opacity: 0;
    transition: opacity 0.2s;
}

.folder-header {
    display: flex;
    align-items: center;
    align-content: center;
    justify-content: flex-start;
    justify-items: center;
    height: 1rem;
    gap: 0.3125rem;
    margin: 0.625rem 1.25rem 
}

.folder-content {
    display: flex;
    flex-direction: column;
    margin: 0.625rem 1.25rem 3.75rem 1.25rem;
    padding: 0.625rem;
    gap: 0.3125rem;
    border: 0.0625rem solid #BBC7DD;
}

.folder-header-logo {
    height:100%;
}

.folder-header-logo img {
    height: 100%;
    width: 100%;
}

.post-content .file-container {
    min-width: 0;
    padding: 0.625rem;
    gap: 0.5rem
}

.post-content .file-panel {
    top: 0;
    min-height: 0;
    width: 100%;
}

.post-files-view {
    padding: 0.3125rem 1.25rem;
    overflow: hidden;
    margin-bottom: 0.9375rem
}

.post-content .dropzone-root {
    min-height: 7.5rem;
}

.post-content .navigate-dir {
    height: 2.1875rem;
    gap: 0.3125rem
}

.post-content .directory-bar {
    padding: 0.3125rem 0.5rem;
    overflow: hidden;
}

.post-content .navigate-dir-button {
    height: 100%;
    width: 2.5rem;
}

.post-content .navigate-dir-button img {
    height: 0.75rem;
}

.folder-toggle {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.3125rem;
    background: none;
    height: auto;
    width: 9.375rem;
    text-align: center;
    padding: 0.4375rem 1.5625rem;
    border-radius: 0.625rem;
    border: #BBC7DD 0.0625rem solid;
    cursor: pointer;
    margin-left: auto;
    font-size: 0.8rem;
    transition: all 0.3s;
}

.folder-toggle:hover {
    background-color: #222E44;
    transition: all 0.1s;
}

.folder-toggle-logo {
    height: 0.75rem;
    width: 0.75rem;
}

.folder-toggle-logo img {
    height: 100%;
}

.folder-hidden {
    background-color: #222E44;
    transition: all 0.1s;
}

.folder-header-text {
    font-size: 1.1rem;
}

.folder-header-logo {
    height:1rem;
}

.folder-header-logo img {
    height: 100%;
    width: 100%;
}

.files-view-transition-enter {
    opacity: 0;
}

.files-view-transition-enter-active {
    opacity: 1;
    transition: all 0.2s;
}

.files-view-transition-exit {
    opacity: 1;
}

.files-view-transition-exit-active {
    opacity: 0;
    transition: all 0.1s;
}

@media (max-width: 600px){
    .fullpost-container {
        width: 100%;
        min-width: unset;
        font-size: 0.8rem;
    }
    
    .app-window {
        width: 100%;
        min-width: unset;
    }

    .title-bar {
        display: flex;
        width: 100%;
        padding: 5px 0 5px 20px;
    }

    .post-title {
        height: fit-content;
        font-size: 1rem;
    }

    .time-since-post {
        height: fit-content;
        font-size: 0.7rem;
    }
    .share-save-container {
        margin-right: 20px ;
    }

    .share-save-container span {
        font-size: 0.7rem;
    }

    .post-user-container {
        font-size: 0.6rem;
    }

    .post-user-container .avatar {
        height: 4rem;
        width: 4rem;
    }

    .post-content {
        font-size: 0.8rem;
    }

    .post-content button {
        border-radius: 0.5rem;
        height: 1.5rem;
        font-size: 0.7rem;
    }

    .content-body p {
        font-size: 0.8rem;
    }

    .post-body span {
        font-size: 0.7rem;
    }
}

